[package]
name = "cansat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.6"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = [
    "add", "mul",
]