[package]
name = "cansat-stm32f446"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cansat = { path = "../cansat" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f446"] }
