[package]
name = "cansat-stm32f446"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bme"]
bme = []

[dependencies]
cansat = { path = "../cansat" }
cansat-gps = { path = "../cansat-gps" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f446", "rtic"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
once_cell = { version = "1.16.0", default-features = false }
heapless = { version = "0.7.16", features = ["defmt"] }
bme280 = { git = "https://github.com/grupacosmo/bme280-rs", default-features = false, features = ["defmt"] }
embedded-sdmmc = "0.4.0"