[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.14.0"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
eyre = "0.6.8"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
