[package]
edition = "2021"
name = "cansat-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerometer = "0.12.0"
defmt = "0.3.4"
heapless = {version = "0.7.16", default-features = false, features = ["serde"]}
heapless-bytes = "0.3.0"
libm = "0.2.6"
ryu = "1.0.13"
serde = {version = "1.0.159", default-features = false, features = ["derive"]}
#nmea = { version = "0.4.0", default-features = false }

[dependencies.nmea]
git = "https://github.com/grupacosmo/nmea.git"
branch = "serde_support"
version = "0.4.0"
default-features = false

[dependencies.derive_more]
default-features = false
features = [
  "add",
  "mul",
]
version = "0.99.17"
