[package]
edition = "2021"
name = "cansat-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defmt = ["dep:defmt"]

[dependencies]
libm = "0.2.6"
ryu = "1.0.13"
heapless = { version = "0.7.16", default-features = false, features = ["serde"] }
accelerometer = "0.12.0"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
heapless-bytes = "0.3.0"
defmt = { version = "0.3.4", optional = true }
mpu6050 = { version = "0.1.0"}

[dependencies.nmea]
git = "https://github.com/AeroRust/nmea"
default-features = false
features = ["serde", "GGA"]

[dependencies.derive_more]
default-features = false
features = [
  "add",
  "mul",
]
version = "0.99.17"
