[package]
name = "cansat-lora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.8"
nom = { version = "7.1.3", default-features = false }

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["from"]
