[package]
name = "cansat-stm32f4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
cansat-core = { path = "../cansat-core" }
cansat-gps = { path = "../cansat-gps" }
cansat-lora = { path = "../cansat-lora" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f411", "rtic", "defmt"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
once_cell = { version = "1.16.0", default-features = false }
heapless = { version = "0.7.16", features = ["defmt"] }
bme280 = { git = "https://github.com/grupacosmo/bme280-rs", default-features = false, features = ["defmt"] }
embedded-sdmmc = { version = "0.4.0", default-features = false, features = ["defmt-log"] }
lis3dh = { version = "0.4.2" }
accelerometer = { version = "0.12.0"}
shared-bus = { version = "0.2.4", features = ["cortex-m", "eh-alpha"] }
serde-csv-core = { git = "https://github.com/grupacosmo/serde-csv-core", rev = "366ca52", features = ["heapless"] }
