[package]
name = "cansat-stm32f4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["panic-probe"]
panic-probe = ["dep:panic-probe"]
panic-reset = ["dep:panic-reset"]

[dependencies]
cansat-core = { path = "../cansat-core" }
cansat-gps = { path = "../cansat-gps" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f411", "rtic", "defmt"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
once_cell = { version = "1.16.0", default-features = false }
heapless = { version = "0.7.16", features = ["defmt"] }
bme280 = { git = "https://github.com/grupacosmo/bme280-rs", default-features = false, features = ["with_defmt"] }
embedded-sdmmc = { version = "0.4.0", default-features = false, features = ["defmt-log"] }
lis3dh = { version = "0.4.2" }
accelerometer = { version = "0.12.0"}
shared-bus = { version = "0.2.4", features = ["cortex-m", "eh-alpha"] }
serde-csv-core = { version = "0.1.0" }
csv-core = "0.1.10"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
panic-reset = { version = "0.1.1", optional = true }
tap = "1.0.1"
