[package]
name = "flight-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
glow = "0.12.3"
time = { version = "0.3.27", features = ["formatting"] }
once_cell = "1.17.1"
derive-new = "0.5.9"
nalgebra = "0.32.3"
