[package]
name = "lora-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false, features = ["track-caller"] }
eyre = "0.6.8"
once_cell = "1.17.1"
regex = "1.8.1"
serialport = "4.2.0"
hex = "0.4"
